Issue #53 Remove extraneous divs getting creating in each section (#62)
* Issue #53 Remove extraneous divs getting creating in each section

* Issue #53 Extra space removed

---------

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -685,7 +685,7 @@ main .home-banner.section {
 				}
 
 				>div {
-					&:nth-last-child(2) {
+					&:nth-last-child(1) {
 						//Should be last child once is fixed
 						grid-area: d;
 					}
